Fixes bug #14569. In addition to check current db of not being NULL value it is added a check of not being empty value. When modifying SP with Admin application on win32 it does not pass curent database so sp is stored with db=null which causes a crash later on show procedure status;